# voicerag

./: README.md  main.py  observability.py  pyproject.toml  tts.py  voice_agent.py
core/: __init__.py  chunker.py  embedder.py  pipeline.py  retriever.py
evals/: __init__.py  cases.jsonl  chat.py  run.py  runner.py
outputs/evals/: live_results.jsonl  results.jsonl  summary.json
outputs/observability/: traces.jsonl
outputs/voice-turns/: turn-001-answer.aiff  turn-002-answer.aiff
router/: llm_router.py
storage/: __init__.py  vector_store.py
tests/: test_audio_io.py  test_chunker.py  test_deepseek.py  test_eval_chat.py  test_evals.py  test_hybrid_retrieval.py  test_llm_router.py  test_mistral_embedder.py  test_observability.py  test_pipeline.py  test_voice_agent.py  test_voice_agent_cli.py  test_voice_config.py
voice/: __init__.py  agent.py  audio_io.py  stt.py  tts.py
