[project]
name = "rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=0.9.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mistralai>=1.0.0",
    "openai>=2.34.0",
    "pydantic>=2.13.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "tiktoken>=0.12.0",
    "torchaudio>=2.11.0",
    "transformers>=4.57,<5",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
